// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow rendering renders correctly arrow in complete mode 1`] = `
<boxStyles>
  <textBubbleStyles
    appMode="COMPLETE_MODE"
    color="#FFF"
    left={false}
    windowScale={
      Object {
        "height": 1,
        "width": 1,
      }
    }
  >
    <boxStyles>
      <text
        fontSize="15px"
      >
        the name of the force
      </text>
    </boxStyles>
  </textBubbleStyles>
  <boxStyles
    position="relative"
  >
    <svg
      height={94}
      viewBox="0 0 400 94"
      width={400}
    >
      <Rectangle
        color="#FFF"
        height={47}
        width={348}
        x={0}
        y={23.5}
      />
      <Triangle
        color="#FFF"
        height={94}
        width={52}
        x="348,0"
        y="348,94"
        z="400,47"
      />
    </svg>
  </boxStyles>
  <Divider
    hidden={true}
  />
</boxStyles>
`;

exports[`Arrow rendering renders driving arrow correctly 1`] = `
<boxStyles>
  <textBubbleStyles
    appMode="EDIT_MODE"
    color="#FFF"
    left={false}
    windowScale={
      Object {
        "height": 1,
        "width": 1,
      }
    }
  >
    <boxStyles>
      <text
        fontSize="15px"
      >
        the name of the force
      </text>
      <TiEdit
        onClick={[Function]}
        size="18"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": "4px",
            "verticalAlign": "top",
          }
        }
      />
    </boxStyles>
  </textBubbleStyles>
  <boxStyles
    position="relative"
  >
    <Icon
      as="i"
      name="delete"
      onClick={[Function]}
      size="big"
      style={
        Object {
          "color": "#dc2f2f",
          "cursor": "pointer",
          "position": "absolute",
          "right": "400px",
          "top": "calc(50% - 14px)",
        }
      }
    />
    <svg
      height={94}
      viewBox="0 0 400 94"
      width={400}
    >
      <Rectangle
        color="#FFF"
        height={47}
        width={348}
        x={0}
        y={23.5}
      />
      <Triangle
        color="#FFF"
        height={94}
        width={52}
        x="348,0"
        y="348,94"
        z="400,47"
      />
    </svg>
    <boxStyles
      left={false}
      position="absolute"
      right="52px"
      top="70.5px"
    >
      <Icon
        as="i"
        disabled={false}
        name="plus"
        onClick={[Function]}
        size="large"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
      <text
        fontSize="18px"
      >
        5
      </text>
      <Icon
        as="i"
        disabled={false}
        name="minus"
        onClick={[Function]}
        size="large"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
    </boxStyles>
  </boxStyles>
  <Divider
    hidden={true}
  />
</boxStyles>
`;

exports[`Arrow rendering renders hindering arrow correctly 1`] = `
<boxStyles>
  <textBubbleStyles
    appMode="EDIT_MODE"
    color="#FFF"
    left={false}
    windowScale={
      Object {
        "height": 1,
        "width": 1,
      }
    }
  >
    <boxStyles>
      <text
        fontSize="15px"
      >
        the name of the force
      </text>
      <TiEdit
        onClick={[Function]}
        size="18"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": "4px",
            "verticalAlign": "top",
          }
        }
      />
    </boxStyles>
  </textBubbleStyles>
  <boxStyles
    position="relative"
  >
    <Icon
      as="i"
      name="delete"
      onClick={[Function]}
      size="big"
      style={
        Object {
          "color": "#dc2f2f",
          "cursor": "pointer",
          "position": "absolute",
          "right": "400px",
          "top": "calc(50% - 14px)",
        }
      }
    />
    <svg
      height={94}
      viewBox="0 0 400 94"
      width={400}
    >
      <Rectangle
        color="#FFF"
        height={47}
        width={348}
        x={0}
        y={23.5}
      />
      <Triangle
        color="#FFF"
        height={94}
        width={52}
        x="348,0"
        y="348,94"
        z="400,47"
      />
    </svg>
    <boxStyles
      left={false}
      position="absolute"
      right="52px"
      top="70.5px"
    >
      <Icon
        as="i"
        disabled={false}
        name="plus"
        onClick={[Function]}
        size="large"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
      <text
        fontSize="18px"
      >
        5
      </text>
      <Icon
        as="i"
        disabled={false}
        name="minus"
        onClick={[Function]}
        size="large"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      />
    </boxStyles>
  </boxStyles>
  <Divider
    hidden={true}
  />
</boxStyles>
`;
